No existen cambios importantes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,16 @@
+:root {
+  --primary: #275EFE;
+  --primary-ligth: #7699FF;
+  --dark: #1C212E;
+  --grey-dark: #3F4656;
+  --grey: #6C7486;
+  --grey-ligth: #CDD9ED;
+  --white: #FFF;
+  --green: #168F78;
+  --sand: #DCB773;
+  --sand-ligth: #EDD9A9;
+}
+
 html,
 body {
   font-family: 'Amazon Ember';
@@ -71,7 +84,7 @@ nav {
   margin-top: 1.8rem;
 }
 
-#number{
+#number {
   text-align: justify;
 }
 
@@ -204,6 +217,7 @@ footer {
   height: 80px;
   padding-left: 0;
 }
+
 .loader:after {
   content: ' ';
   display: block;
@@ -215,10 +229,12 @@ footer {
   border-color: #fa9c23 transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
+
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -454,7 +470,7 @@ footer {
 
 /* Confirm Order */
 
-.order-confirm p,
+/* .order-confirm p,
 .order-details p {
   margin-left: 1.5rem;
 }
@@ -467,7 +483,7 @@ footer {
 
 .update-btn:hover {
   color: white;
-}
+} */
 
 /* Pagination */
 .page-item.active .page-link {
@@ -498,6 +514,7 @@ footer {
   top: 0;
   z-index: 10;
 }
+
 #sidebar {
   min-width: 100%;
   max-width: 100%;
@@ -505,6 +522,7 @@ footer {
   color: #fff;
   transition: all 0.3s;
 }
+
 #sidebar.active {
   margin-left: -250px;
 }
@@ -513,6 +531,7 @@ footer {
   padding: 20px;
   background: #232f3e;
 }
+
 #sidebar ul.components {
   padding: 5px 0px;
   border-bottom: 1px solid #232f3e;
@@ -525,6 +544,7 @@ footer {
   color: white;
   text-decoration: none;
 }
+
 #sidebar ul li a:hover {
   color: #232f3e;
   background: #fff;
@@ -534,14 +554,16 @@ footer {
   margin-right: 0.3rem;
 }
 
-#sidebar ul li.active > a,
+#sidebar ul li.active>a,
 a[aria-expanded='true'] {
   color: #fff;
   background: #232f3e;
 }
+
 a[data-toggle='collapse'] {
   position: relative;
 }
+
 .dropdown-toggle::after {
   display: block;
   position: absolute;
@@ -617,3 +639,4 @@ ul.CTAs a {
   font-size: 0.8rem;
   color: grey;
 }
+
